# blade

./: CMakeLists.txt
cmake/: FindSOIL.cmake
res/: default_fragment.glsl  default_vertex.glsl
res/shaders/: default_fragment.glsl  default_vertex.glsl
src/: blade.c  blade.h  io.c  io.h
src/mesh/: mesh.c  mesh.h  primitives.c  primitives.h
test/: main.c
